--- a/charts/pvc-autoscaler/templates/clusterrole.yaml
+++ b/charts/pvc-autoscaler/templates/clusterrole.yaml
@@ -7,4 +7,7 @@ metadata:
 rules:
   - apiGroups: [""]
     resources: ["persistentvolumeclaims"]
-    verbs: ["get", "watch", "list", "update", "patch"]
+    verbs: ["get", "list", "update", "patch"]
+  - apiGroups: ["storage.k8s.io"]
+    resources: ["storageclasses"]
+    verbs: ["get", "list"]
