--- a/charts/pvc-autoscaler/templates/deployment.yaml
+++ b/charts/pvc-autoscaler/templates/deployment.yaml
@@ -30,3 +30,7 @@ spec:
             - --reconcile-timeout={{ .Values.pvcAutoscaler.args.reconcileTimeout }}
             - --log-level={{ .Values.pvcAutoscaler.args.logger.logLevel }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          resources:
+            requests:
+              cpu: "{{ .Values.resources.requestCPU }}"
+              memory: "{{ .Values.resources.requestMemory }}"
