Issue # 11 - Add Additional Parameters to the Helm Chart

--- a/charts/pvc-autoscaler/values.yaml
+++ b/charts/pvc-autoscaler/values.yaml
@@ -32,3 +32,9 @@ pvcAutoscaler:
 
     # pvcAutoscaler.extraLabels -- Additional labels that will be added to pvc-autoscaler Deployment.
     extraLabels: {}
+
+  nodeSelector: {}
+
+  tolerations: []
+
+  podAnnotations: {}
