--- a/charts/pvc-autoscaler/templates/deployment.yaml
+++ b/charts/pvc-autoscaler/templates/deployment.yaml
@@ -30,3 +30,15 @@ spec:
             - --reconcile-timeout={{ .Values.pvcAutoscaler.args.reconcileTimeout }}
             - --log-level={{ .Values.pvcAutoscaler.args.logger.logLevel }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+      {{- with .Values.pvcAutoscaler.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{ - with .Values.pvcAutoscaler.tolerations }}
+      tolerations:
+        {{ - toYaml . | nindent 8 }}
+      {{ - end }}
+      {{ - with .Values.pvcAutoscaler.podAnnotations }}
+      podAnnotations:
+        {{ - toYaml . | nindent 8 }}
+      {{ - end }}
