DEV: Add resources Parameters for the Autoscaler Deployment in the Helm Chart (#14)
* Add resources Parameters for the Autoscaler Deployment in the Helm Chart

* Changes completed as per PR review comments

* Incorporated changes as per review comments iteration # 2

* Downgrade default values of requested CPU and Memory

* Added EOF character

--- a/charts/pvc-autoscaler/templates/deployment.yaml
+++ b/charts/pvc-autoscaler/templates/deployment.yaml
@@ -30,3 +30,7 @@ spec:
             - --reconcile-timeout={{ .Values.pvcAutoscaler.args.reconcileTimeout }}
             - --log-level={{ .Values.pvcAutoscaler.args.logger.logLevel }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          resources:
+            requests:
+              cpu: "{{ .Values.pvcAutoscaler.resources.requestCPU }}"
+              memory: "{{ .Values.pvcAutoscaler.resources.requestMemory }}"
