--- a/charts/pvc-autoscaler/templates/deployment.yaml
+++ b/charts/pvc-autoscaler/templates/deployment.yaml
@@ -16,6 +16,10 @@ spec:
     metadata:
       labels:
         {{- include "pvcautoscaler.selectorLabels" . | nindent 8 }}
+      {{- with .Values.pvcAutoscaler.annotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
     spec:
       serviceAccountName: {{ include "pvcautoscaler.fullname" . }}
       containers:
@@ -34,11 +38,7 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{ - with .Values.pvcAutoscaler.tolerations }}
+      {{- with .Values.pvcAutoscaler.tolerations }}
       tolerations:
-        {{ - toYaml . | nindent 8 }}
-      {{ - end }}
-      {{ - with .Values.pvcAutoscaler.podAnnotations }}
-      podAnnotations:
-        {{ - toYaml . | nindent 8 }}
-      {{ - end }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
