Converted annotation to list

--- a/charts/pvc-autoscaler/values.yaml
+++ b/charts/pvc-autoscaler/values.yaml
@@ -48,4 +48,4 @@ pvcAutoscaler:
   tolerations: {}
 
   # pvcAutoscaler.annotations -- Annotations to attach arbitrary non-identifying metadata to pods.
-  annotations: []
+  annotations: {}
